# Platformer

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
math/: Vec2.h  Vec3.h
objects/: Components.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h
objects/components/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Components.h  MeshCollider.cpp  MeshCollider.h  Player.cpp  Player.h  RigidBody.cpp  RigidBody.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
objects/components/collisions/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  MeshCollider.cpp  MeshCollider.h  Simplex.cpp  Simplex.h
